# vs_snprintf

./: .gitignore  CMakeLists.txt  LICENSE  README.md  snprintf_compat.c  snprintf_compat.h  tests.cpp
tests/: tests.c
